--- a/resources/public/app.build.css
+++ b/resources/public/app.build.css
@@ -2149,6 +2149,9 @@
     font-size: var(--text-base);
     line-height: calc(var(--spacing) * 7);
   }
+  .text-\[0\.6rem\] {
+    font-size: 0.6rem;
+  }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
@@ -2243,6 +2246,9 @@
   .text-\[\#717684\] {
     color: #717684;
   }
+  .text-\[0\.\] {
+    color: 0.;
+  }
   .text-blue-600 {
     color: var(--color-blue-600);
   }
@@ -2302,6 +2308,9 @@
   }
   .text-white {
     color: var(--color-white);
+  }
+  .text-zinc-400 {
+    color: var(--color-zinc-400);
   }
   .text-zinc-500 {
     color: var(--color-zinc-500);
